chore: update repository with correct values for monorepository

--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   ],
   "repository": {
     "type": "git",
-    "url": "smart-services-repo"
+    "url": "git+https://github.com/dshovchko/smart-services.git"
   },
   "keywords": [
     "loading",
